Fix background scroll causing issues on iOS devices

--- a/src/sass/_content.scss
+++ b/src/sass/_content.scss
@@ -153,6 +153,10 @@
   background-attachment: fixed;
   background-size: cover;
 
+  @media (max-width: $sm-width) {
+    background-attachment: scroll;
+  }
+
   .wrapper {
     padding-bottom: 100px;
 
