--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -4,12 +4,13 @@
   background-attachment: fixed;
   background-position: center center;
   background-size: cover;
-  height: 100vh;
+  height: 100%;
   min-height: 700px;
   width: 100%;
   position: relative;
 
   @media (max-width: $sm-width) {
+    background-attachment: scroll;
     min-height: 600px;
   }
 
